--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext {
         springBootVersion = '2.1.0.RELEASE'
+        //springBootVersion = '2.4.0'
     }
     repositories {
         mavenCentral()
@@ -33,6 +34,8 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     compile('org.springframework.boot:spring-boot-starter-web')
     runtime('org.springframework.boot:spring-boot-devtools')
+    compile('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
+    compile group: 'cz.jirutka.spring', name: 'embedmongo-spring', version: '1.3.1'
     compile 'org.webjars:bootstrap:3.3.7-1'
     compileOnly('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
