--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,2 @@
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:h2:mem:testDb
-logging.level.guru.springframework=debug
+spring.data.mongodb.port=0
+spring.data.mongodb.host=localhost
