--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ repositories {
 
 
 dependencies {
+	implementation 'org.projectlombok:lombok:1.18.18'
 	compile('org.springframework.boot:spring-boot-starter-data-mongodb')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-web')
@@ -36,8 +37,10 @@ dependencies {
     compile('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
     compile group: 'cz.jirutka.spring', name: 'embedmongo-spring', version: '1.3.1'
 	compile 'org.webjars:bootstrap:3.3.7-1'
+	compile('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile('io.projectreactor:reactor-test')
 }
 
 //export test coverage
